# wisper-genie

./: .gitignore  README.md  install.sh  pyproject.toml
bench/: measure_accuracy.py  measure_latency.py
config/: default.toml  dictionary.toml
docs/plans/: 2026-03-09-intelligence-layer.md
scripts/: dictation-wrapper  setup_models.sh  test_mic.py
src/dictation/: __init__.py  app.py  cli.py
src/dictation/asr/: base.py  whisper_cpp.py
src/dictation/audio/: capture.py  vad.py
src/dictation/cleanup/: base.py  ollama.py  prompts.py
src/dictation/commands/: handler.py
src/dictation/context/: cache.py  dictionary.py  screen.py  style_memory.py
src/dictation/output/: injector.py  overlay.py
src/dictation/telemetry/: latency.py  metrics.py
src/dictation/transcript/: buffer.py
tests/: conftest.py  test_app.py  test_asr.py  test_buffer.py  test_capture.py  test_cleanup.py  test_commands.py  test_context_cache.py  test_dictionary.py  test_injector.py  test_metrics.py  test_overlay.py  test_pipeline.py  test_screen_context.py  test_style_memory.py  test_vad.py
